--- a/package.json
+++ b/package.json
@@ -6,15 +6,22 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "db:push": "drizzle-kit push",
+    "db:studio": "drizzle-kit studio"
   },
   "dependencies": {
     "@clerk/nextjs": "^5.2.2",
+    "@google/generative-ai": "^0.16.0",
+    "@neondatabase/serverless": "^0.9.4",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@toast-ui/react-editor": "^3.2.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "drizzle-orm": "^0.32.1",
     "lucide-react": "^0.407.0",
+    "moment": "^2.30.1",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
@@ -25,6 +32,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "drizzle-kit": "^0.23.1",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
